2009-11-06 Andoni Morales Alastruey <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/common/managerspawner.py:
	Stop properly managers started by the LocalManagerSpawner
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_managerspawner.py:
	* flumotion/test/test_common_managerspawner.py (added):
	Add a test suite for the LocalManagerSpawner
	Close #1380

2009-11-06  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Julien

	* flumotion/admin/assistant/models.py:
	* flumotion/component/producers/firewire/wizard_gtk.py:
	* flumotion/admin/assistant/save.py:
	Delegate the comparisons to the component models. This way we can
	distinguish between two firewire producers with different guid.
	Fixes #1376

2009-11-05  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/extern/log/log.py:
	Move the Unicode encoding logic down to the exception
	handler. Has the same effect as r8216, but avoids encoding
	when not necessary, which for frequently-called code like logging is
	important.
	Tests showed that r8216 amounted to a 10% slowdown of the logging, this
	change brings the lost performance back.

	* flumotion/extern/log/README:
	Document that logging Unicode objects will encode them with UTF-8 prior
	to emitting the log line.

2009-11-04  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/configurationassistant.py:
	Remember the previous step worker when going back on the wizard.
	See #1359

2009-11-04  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Zaheer Abbas Merali

	* flumotion/component/feedcomponent010.py:
	Drop all IN_CAPS buffers that come in after connecting to a feeder,
	until the first non-IN_CAPS buffer.
	The reason is that when streaming a format that has a streamheader,
	which can appear only at the beginning of a stream, a network glitch
	and a subsequent reconnection will cause the multifdsink of the
	upstream component to repeat the streamheader, which will then break